--- a/fix_pls_god/scss/mediaMain.scss
+++ b/fix_pls_god/scss/mediaMain.scss
@@ -2,180 +2,81 @@
 /////////////////////////////////////////////////////////////////////////////////////////////
 
 
-////Phone display 576px - 0////
+////Phone display 567px - 0////
 /////////////////////////////////////////////////////////////////////////////////////////////
-@media (max-width:576px){
-//////////////
-    .price{
-        min-height: 700px;
-    }
-    .price__wrapper{
-        min-height: 590px;
+@media (max-width:567px){
+        .intro__text{ 
+            min-height: 250px;
+            width: 310px;
+        h1{
+            font-size: 25px;
+        }
         span{
-            margin-bottom: 20px;
-        }
-        h2{
-            padding-bottom: 15px;
+            font-size: 15px;
+            width: 260px;
         }
     }
-    .price__footer{
+        .intro__wrapper{
+            margin-top: 80px;
+        }
+        .intro__social{
+            margin-top: 10px;
+            height: 30px;
+        }
+
+}
+@media (max-width:768px){
+    .nav__container ul li a{
+        font-size: 12px;
+    }
+    .intro__text{ 
+        align-items: center;
+        min-height: 350px;
+        text-align: center;
+        width: 410px;
+    h1{
+        font-size: 35px;
+    }
+    span{
+        font-size: 25px;
+    }
+    }
+    .intro__wrapper{
         flex-direction: column;
-        min-height: 220px;
-        background-color: #504C58;
+        align-items: center;
+        min-height: 350px;
+        margin-top: -60px;
     }
-    .price__about{
-        min-height: 140px;
-        margin-top: 15px;
-        span{
-            padding-bottom: 10px;
-        }
+    .intro__main--button{
+        display: none;
     }
-    .price__container div{
-        min-width: 140px;
-        min-height: 260px;
+    .intro__social{
+        flex-direction: unset;
+        width: 200px;
+        height: 50px;
+        margin-bottom: -30px;
     }
-    .price__container{
-        min-width: 275px;
-        
-    }
-///////////////
+
+
+}
+@media (max-width:992px){
     .service{
-        min-height: 1550px;
-    }
-    .service__wrapper{
-        margin-top: -900px;
+        min-height: 1970px;
     }
     .service__block--wrapper{
-        flex-direction: column;
-        align-items: center;
-        div{
-            min-width: 100%;
-            margin-bottom: 50px;
-        }
+        flex-wrap: wrap;
+        height: 90%;
     }
-    .service__block--item{
-        p{
-            max-width: 270px;
-        }
-    }
-//////////////
+    //
     .reviews{
-        min-height: 1100px;
-    }
-    .reviews__wrapper{
-        h2{
-            margin-left: 50px;
-        }
+        min-height: 1480px;
     }
     .reviews__block--wrapper{
-        flex-direction: column;
-        min-height: 900px;
-        div{
-            min-width: 290px;
-            margin-bottom: 10px;
-        }
-    }
-
-//////////////
-    .footer{
-        min-height: 900px;
-    }
-    .footer__wrapper div:nth-child(4){
-        flex-direction: column;
-        span{
-            margin-bottom: 5px;
-            text-align: center;
-        }
-    }
-    .footer__wrapper div:nth-child(2){
-        flex-direction: column;
-        min-width: 320px;
-        min-height: 215px;
-        .footer__contact, #map{
-            min-width: 320px;
-        }
-        .footer__contact{
-            min-height: 330px;
-        }
-    }
-    .footer__wrapper div:nth-child(2) .footer__contact .footer__contact--text{
-        padding-left: 25px;
-    }
-//////////////
-}
-
-
-
-
-/////////////////////////////////////////////////////////////////////////////////////////////
-
-
-////tablet display 768px - 0////
-/////////////////////////////////////////////////////////////////////////////////////////////
-@media (max-width:768px){
-    .service, .reviews, .price, .footer, .main{
-        max-height: 600px;
-    }
-    .service__block--item span, p{
-        font-size: 11px;
+        flex-wrap: wrap;
+        height: 90%;
     }
 }
-/////////////////////////////////////////////////////////////////////////////////////////////
 
-
-////tablet display 1138px - 0////
-/////////////////////////////////////////////////////////////////////////////////////////////
-@media (max-width:992px){
-    .main__block--wrapper{
-        flex-direction: column;
-        align-items: center;
-        min-height: 800px;
-        .main__block--left{
-            margin-bottom: 160px;
-        }
-    }
-    .main__wrapper{
-        h2{
-            margin-top: 10px;
-        }
-    }
-    .main{
-        min-height: 1000px;
-    }
-    // .nav__container{
-    // a.links{
-    //     font-size: 11px;
-    // }
-    // ul{
-    //     li{
-    //         a{
-    //             font-size: 11px;
-    //         }
-    //     }
-    // }
-    // }
-    .price__text {
-        h4{
-            font-size: 11px;
-        }
-    }
-    .price__about{
-        span:last-child{
-            font-size: 11px;
-        }
-    }
-    .price__container{
-        margin: 30px 0;
-    }
-}
-/////////////////////////////////////////////////////////////////////////////////////////////
-// @media (min-width: 993px){
-//     .intro__text{
-//         h1{
-//             font-size: 50px;
-//         }
-//     }
-// }
 
 ///4k display////
 ////////////////////////////////////////////////////////////////////////////////////////////
