--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -74,6 +74,91 @@ nav {
     position: fixed;
     z-index: 10;
 }
+.burger-menu__button{
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 30;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #504C58;
+}
+.burger-menu__button:hover .burger-menu__lines{
+    filter: brightness(0.7);
+}
+.burger-menu__lines,
+.burger-menu__lines::after,
+.burger-menu__lines::before {
+    position: absolute;
+    width: 40px;
+    height: 6px;
+    background-color: #C4C4C4;
+}
+.burger-menu__lines{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.burger-menu__lines::before{
+    content: '';
+    top: -12px;
+}
+.burger-menu__lines::after{
+    content: '';
+    top: 12px;
+}
+.burger-menu_active .burger-menu__lines{
+    background-color: transparent;
+}
+.burger-menu_active .burger-menu__lines::before{
+    top: 0;
+    transform: rotate(45deg);
+}
+.burger-menu_active .burger-menu__lines::after{
+    top: 0;
+    transform: rotate(-45deg);
+}
+.burger-menu__nav{
+    padding: 80px;
+    position: fixed;
+    z-index: 20;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 50%;
+    background-color: #504C58;
+    overflow-y: auto;
+    left: -100%;
+}
+.burger-menu_active .burger-menu__nav{
+    left: 0;
+}
+.burger-menu__link{
+    padding: 30px;
+    font-size: 32px;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-weight: bold;
+    color: #fff;
+}
+.burger-menu__link:hover{
+    filter: brightness(0.7);
+}
+.burger-menu__overlay{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 10;
+}
+.burger-menu_active .burger-menu__overlay{
+    display: block;
+}
+
 .nav__container {
     width: 85%;
     display: flex;
@@ -183,55 +268,11 @@ nav {
         background-color: #FE9C55;
     }
 }
-////media....................................................................................
-@media (max-width:768px){
-    .nav__container ul li a{
-        font-size: 12px;
-    }
-    .intro__text{ 
-        align-items: center;
-        min-height: 350px;
-        text-align: center;
-        width: 410px;
-    h1{
-        font-size: 35px;
-    }
-    span{
-        font-size: 25px;
-    }
-    }
-    .intro__wrapper{
-        flex-direction: column;
-        align-items: center;
-    }
-    .intro__main--button{
-        display: none;
-    }
-    .intro__social{
-        flex-direction: unset;
-        width: 200px;
-    }
-}
-@media (max-width:567px){
-    .intro__text{ 
-        min-height: 250px;
-        width: 310px;
-    h1{
-        font-size: 25px;
-    }
-    span{
-        font-size: 15px;
-        width: 260px;
-    }
-}
-}
-////media....................................................................................
-
 // main
 // ==========================================================================================
 .main {
     width: 100%;
-    // max-width: 1440px
+    max-width: 1440px;
     height: 100vh;
     background-color: #D4E1F4;
     display: flex;
@@ -383,91 +424,88 @@ nav {
 // ==========================================================================================
 .service{
     width: 100%;
-    max-width: 1440px;
-    // max-height: 700px;
     height: 100vh;
     background-color: #D4E1F4;
     @include flex__center;
 }
 .service__wrapper{
-    width: 90%;
-    height: 490px;
+    margin-top: 35px;
+    height: 95%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
+    justify-content: space-between;
     h2 {
-        width: 78%;
-        padding: 0;
         color: #504C58;
-        font-size: 25px;
-        text-align: start;
         font-weight: 400;
-        margin-bottom: 80px;
+        padding: 15px;
     }
 }
 .service__block--wrapper{
-    height: 390px;
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    div{
-        width: 30%;
+    justify-content: space-around;
+    .service__block{
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin: 20px 20px 30px 20px;
     }
 }
 .service__block{
     box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
+    div:first-child{
+        margin-top: -60px;
+    }
 }
+
 .service__numbers{
     color: #fff;
     font-size: 110px;
-    margin-top: -65px;
     font-weight: 600;
 }
 .service__block--item{
+    display: flex;
+    flex-direction: column;
     span{
         color: #E1680F;
-        width: 300px;
         text-align: center;
-        margin-bottom: 15px;
         font-weight: 600;
+        padding: 10px;
+
     }
     p{
         color: #504C58;
-        width: 280%;
+        padding: 10px;
         font-weight: 300;
+        text-align: center;
+
     }
     img{
-        height: 120px;
+        height: 110px;
     }
 }
 // reviews
 // ==========================================================================================
 .reviews{
     width: 100%;
-    max-width: 1440px;
     height: 100vh;
     @include flex__center;
     .reviews__wrapper{
+        margin-top: 35px;
+        height: 95%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        div{
-            flex-basis: 400px;
-        }
+        justify-content: space-between;
         h2 {
             color: #E1680F;
-            // font-weight: 400;
-            margin-bottom: 50px;
-            margin-right: 55%;
+            font-weight: 400;
+            padding: 20px;
         }
         a{
             @include links;
             color: #E1680F;
-            margin-top: 15px;
         }
         a:hover{
             color: #504C58;
@@ -475,13 +513,11 @@ nav {
     }
 }
 .reviews__block--wrapper{
-    height: 370px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     div{
-        flex-basis: 500px;
-        margin: 20px 20px 0 20px;
+        margin: 20px 20px 20px 20px;
         box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
         div{
             box-shadow: none;
