--- a/fix_pls_god/scss/mediaMain.scss
+++ b/fix_pls_god/scss/mediaMain.scss
@@ -5,61 +5,51 @@
 ////Phone display 567px - 0////
 /////////////////////////////////////////////////////////////////////////////////////////////
 @media (max-width:567px){
-        .intro__text{ 
-            min-height: 250px;
-            width: 310px;
-        h1{
-            font-size: 25px;
-        }
-        span{
-            font-size: 15px;
-            width: 260px;
-        }
-    }
-        .intro__wrapper{
-            margin-top: 80px;
-        }
-        .intro__social{
-            margin-top: 10px;
-            height: 30px;
-        }
-
-}
-@media (max-width:768px){
-    .nav__container ul li a{
-        font-size: 12px;
-    }
-    .intro__text{ 
-        align-items: center;
-        min-height: 350px;
-        text-align: center;
-        width: 410px;
-    h1{
-        font-size: 35px;
-    }
-    span{
-        font-size: 25px;
-    }
-    }
-    .intro__wrapper{
-        flex-direction: column;
-        align-items: center;
-        min-height: 350px;
-        margin-top: -60px;
-    }
     .intro__main--button{
         display: none;
     }
+    .intro__wrapper{
+        flex-direction: column;
+    }
     .intro__social{
-        flex-direction: unset;
-        width: 200px;
-        height: 50px;
-        margin-bottom: -30px;
+        display: flex;
+        justify-content: space-around;
+    }
+    .intro__text{
+        text-align: center;
+    }
+    .footer__wrapper div:nth-child(2){
+        flex-direction: column;
     }
 
-
 }
+@media (min-width:568px){
+    .intro__text
+    h1{
+        font-size: 3.7vw;
+    }
+    span{
+        font-size: 2.2vw;
+    }
+}
+
 @media (max-width:992px){
+    .nav{
+        display: none;
+    }
+    .price{
+        min-height: 800px;
+    }
+    .price__footer button{
+        display: none;
+    }
+    .price__footer{
+        flex-direction: column;
+        text-align: center;
+    }
+    .price__container{
+       min-width: 100%;
+    }
     .service{
         min-height: 1970px;
     }
@@ -74,6 +64,14 @@
     .reviews__block--wrapper{
         flex-wrap: wrap;
         height: 90%;
+    }
+    .footer{
+        min-height: 1200px;
+    }
+    .footer__contact--text{
+        span{
+            padding: 35px;
+        }
     }
 }
 
