--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -52,8 +52,6 @@ body {
 // ==========================================================================================
 header {
     width: 100%;
-    max-width: 1440px;
-    max-height: 1150px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -66,13 +64,49 @@ header {
 // ==========================================================================================
 nav {
     width: 100%;
-    max-width: 1440px;
     height: 60px;
     background-color: #504C58;
     display: flex;
     justify-content: center;
     position: fixed;
     z-index: 10;
+}
+
+.nav__container {
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    ul {
+        @include links;
+        display: flex;
+        width: 65%;
+        justify-content: space-between;
+    }
+    a {
+        @include links;
+        font-size: 16px;
+        font-weight: 300;
+        color: #C4C4C4;
+        padding-top: 25px;
+    }
+    a:first-child{
+        margin-top: -20px;
+        width: 1px;
+    }
+    a:hover{
+        color: #D4E1F4;
+        border-bottom: 1px solid #D4E1F4;
+        transition: .1s linear;
+    }
+    a.links{
+        color: #FE9C55;
+        padding-top: 0;
+    }
+    a.links:hover {
+        border: none;
+        color: #D4E1F4;
+    }
 }
 .burger-menu__button{
     position: fixed;
@@ -159,52 +193,11 @@ nav {
     display: block;
 }
 
-.nav__container {
-    width: 85%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    ul {
-        @include links;
-        display: flex;
-        width: 65%;
-        justify-content: space-between;
-    }
-    a {
-        @include links;
-        font-size: 16px;
-        font-weight: 300;
-        color: #C4C4C4;
-        padding-top: 25px;
-    }
-    a:first-child{
-        margin-top: -20px;
-        width: 1px;
-    }
-    a:hover{
-        color: #D4E1F4;
-        border-bottom: 1px solid #D4E1F4;
-        transition: .1s linear;
-    }
-    a.links{
-        color: #FE9C55;
-        padding-top: 0;
-    }
-    a.links:hover {
-        border: none;
-        color: #D4E1F4;
-    }
-}
-
-////media....................................................................................
-
-////media....................................................................................
 
 // intro
 // ==========================================================================================
 .intro {
     width: 100%;
-    max-width: 1440px;
     height: 100vh;
     @include flex__center;
     background-color: rgba($color: #504C58, $alpha: .6);
@@ -221,12 +214,9 @@ nav {
     @include flex__column;
     span {
         color: #fff;
-        font-size: 2.2vw;
     }
     h1 {
-        font-size: 3.6vw;
         color: #D4E1F4;
-        margin: 0;   
     }
     .intro__main--button {
         width: 300px;
@@ -246,10 +236,8 @@ nav {
     }
     }
 }
-.intro__social {
-    margin-top: 55px;
-    height: 170px;
-    @include flex__column;
+.intro__social a{
+    margin-bottom: 15px;
 }
 .intro__slides {
     z-index: 11;
@@ -343,7 +331,7 @@ nav {
     background: url(../img/icons/price_calculator.svg)no-repeat;
     background-position: right center;
     width: 85%;
-    height: 530px;
+    height: 85%;
     @include flex__column;
     background-color: #504C58;
     h2 {
@@ -506,6 +494,7 @@ nav {
         a{
             @include links;
             color: #E1680F;
+            margin-bottom: 15px;
         }
         a:hover{
             color: #504C58;
@@ -549,14 +538,12 @@ nav {
 // ==========================================================================================
 .footer{
     width: 100%;
-    max-width: 1440px;
-    // max-height: 700px;
     height: 100vh;
     @include flex__center;
     background-color: #504C58;    
 }
 .footer__wrapper{
-    margin-top: 50px;
+    margin-top: 35px;
     width: 95%;
     height: 85%;
     display: flex;
@@ -564,13 +551,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     div:nth-child(2){
-        display: flex;
-        height: 70%;
-        width: 80%;
-        background-color: #504C58;
-        box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
         .footer__contact{
-            width: 45%;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
@@ -628,7 +609,7 @@ nav {
             }
         }
         #map{
-            width: 55%;
+            width: 100%;
             height: 100%;
         }
     }
@@ -666,4 +647,11 @@ nav {
         font-weight: 400;
         margin: 0;
     }
+}
+.footer_wrapper--contacts{
+    display: flex;
+    height: 70%;
+    width: 90%;
+    background-color: #504C58;
+    box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
 }
