--- a/fix_pls_god/scss/mediaMain.scss
+++ b/fix_pls_god/scss/mediaMain.scss
@@ -24,12 +24,13 @@
 
 }
 @media (min-width:568px){
-    .intro__text
+    .intro__text{
     h1{
         font-size: 3.7vw;
     }
     span{
         font-size: 2.2vw;
+    }
     }
 }
 
