--- a/fix_pls_god/scss/mediaMain.scss
+++ b/fix_pls_god/scss/mediaMain.scss
@@ -1,7 +1,3 @@
-////  MEDIA  ////
-/////////////////////////////////////////////////////////////////////////////////////////////
-
-
 ////Phone display 567px - 0////
 /////////////////////////////////////////////////////////////////////////////////////////////
 @media (max-width:567px){
@@ -21,6 +17,9 @@
     .footer__wrapper div:nth-child(2){
         flex-direction: column;
     }
+    // .footer__wrapper div:nth-child(4){
+    //     flex-direction: column;
+    // }
 
 }
 @media (min-width:568px){
@@ -33,11 +32,42 @@
     }
     }
 }
-
-@media (max-width:992px){
-    .nav{
+@media (min-width:992px){
+    .icon{
         display: none;
     }
+    .nav__container{
+        max-width: 992px;
+    }
+}
+@media (max-width:992px){
+    .nav__container a{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+    .phone--number{visibility: hidden;}
+    ul.topnav li {display: none;}
+    ul.topnav li.icon {top: 0; right: 0; display: inline-block;}
+    ul.topnav.resonsive {
+        position: relative;
+    } 
+    ul.topnav{
+        flex-direction: column;
+    }
+    ul.topnav.responsive li.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    ul.topnav.responsive li {
+        float: none;
+        display: inline;
+    }
+    ul.topnav.responsive li a {
+        display: block;
+        text-align: left;
+    }
+    //
     .price{
         min-height: 800px;
     }
@@ -51,6 +81,7 @@
     .price__container{
        min-width: 100%;
     }
+    //
     .service{
         min-height: 1970px;
     }
@@ -66,6 +97,7 @@
         flex-wrap: wrap;
         height: 90%;
     }
+    //
     .footer{
         min-height: 1200px;
     }
@@ -75,7 +107,6 @@
         }
     }
 }
-
 
 ///4k display////
 ////////////////////////////////////////////////////////////////////////////////////////////
