--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -114,12 +114,11 @@ ul.topnav{
         color: #D4E1F4;
     }
 }
-.icon a{  
-    color: #D4E1F4;
+.icon{
     text-decoration: none;
-    list-style-type: none;
-    // font-size: 30px;
-    margin-right: 15px;
+    list-style-type: none;  
+    color: #D4E1F4;
+    font-size: 50px;
 }
 .responsive{
     background-color: #504C58;
@@ -436,7 +435,7 @@ ul.topnav{
             color: #E1680F;
             width: 85%;
             text-align: left;
-            margin-bottom: 40px;
+            margin-bottom: 50px;
         }
         a:hover{
             color: #504C58;
@@ -486,9 +485,8 @@ ul.topnav{
     background-color: #504C58;    
 }
 .footer__wrapper{
-    // margin-top: 35px;
     width: 85%;
-    height: 80%;
+    height: 85%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -503,7 +501,7 @@ ul.topnav{
             padding: 10px 0;
             .footer__contact--text{
                 width: 90%;
-                height: 95%;
+                height: 75%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-around;
@@ -560,6 +558,7 @@ ul.topnav{
     div:nth-child(3){
         display: flex;
         justify-content: center;
+        padding-top: 10px;
     }
     div:nth-child(4){
         display: flex;
@@ -597,4 +596,8 @@ ul.topnav{
 }
 .social__item--footer{
     fill: #D4E1F4;
+    &:hover{
+        box-shadow: 2px 1px 38px rgba(8, 16, 22, 0.7);
+
+    }
 }
