--- a/fix_pls_god/scss/mediaMain.scss
+++ b/fix_pls_god/scss/mediaMain.scss
@@ -20,6 +20,9 @@
     // .footer__wrapper div:nth-child(4){
     //     flex-direction: column;
     // }
+    .footer__button{
+        display: none;
+    }
 
 }
 @media (min-width:568px){
@@ -36,6 +39,9 @@
     }
 }
 @media (min-width:992px){
+    .mobile__nav a{
+        display: none;
+    }
     .icon{
         display: none;
     }
@@ -44,6 +50,10 @@
     }
 }
 @media (max-width:992px){
+    
+    .nav__wrapper {
+        visibility: hidden;
+    }
     .phone--number{visibility: hidden;}
     ul.topnav li {display: none;}
     ul.topnav li.icon {top: 0; right: 0; display: inline-block;}
