--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -3,6 +3,9 @@ body {
     margin: 0;
     font-family: gilroy, sans-serif;
     color: white;
+    &.no-scroll{
+        // overflow: hidden;
+    }
 }
 *,
 *:after,
@@ -81,6 +84,7 @@ header {
         width: 70px;
     }
 }
+
 // navigation
 // ==========================================================================================
 .nav__container {
@@ -127,20 +131,42 @@ ul.topnav{
         color: #D4E1F4;
     }
 }
-.icon{
-    text-decoration: none;
-    list-style-type: none;  
-    color: #D4E1F4;
-    font-size: 50px;
-}
+// .icon{
+//     text-decoration: none;
+//     list-style-type: none;  
+//     color: #D4E1F4;
+//     font-size: 50px;
+// }
 .responsive{
     background-color: #504C58;
     width: 100%;
-    height: 95vh;
+    height: 90vh;
     position: absolute;
-    top: 50px;
+    top: 70px;
     transition: 0.3s;
-
+}
+.mobile__nav{
+    width: 100%;
+    top: 0;
+    right: 0;
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    .x{
+        background: url(../img/icons/menu.svg);
+        height: 70px;
+        width: 70px; 
+    }
+}
+.mobile__nav--responsive{
+    background-color: #504C58;
+    width: 100%;
+    transition: .3s;
+    .x{
+        background: url(../img/icons/menu.svg);
+        height: 70px;
+        width: 70px; 
+    }
 }
 // intro
 // ==========================================================================================
@@ -201,6 +227,7 @@ ul.topnav{
         border-radius: 50%;
         background-color: #504C58;
         border: none;
+
     }
     button:hover {
         background-color: #FE9C55;
@@ -351,6 +378,7 @@ ul.topnav{
         width: 250px;
         height: 50px;
         font-weight: 300;
+        outline: none;
         &:hover{
             color: #000000;
             background-color: #FE9C55;
@@ -544,7 +572,7 @@ ul.topnav{
             div{
                 box-shadow: none;
             }
-            button{
+            .footer__button{
                 width: 170px;
                 height: 50px;
                 background-color: #FA8A37;
@@ -613,4 +641,122 @@ ul.topnav{
         box-shadow: 2px 1px 38px rgba(8, 16, 22, 0.7);
 
     }
+}
+
+// modal
+// ==========================================================================================
+.modal{
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    background-color: rgba(8, 16, 22, 0.55);
+    top: 0;
+    left: 0;
+    z-index: 5000;
+    display: flex;
+}
+.modal__dialog{
+    margin: 60px auto;
+    width: 350px;
+    height: 500px;
+    background-color: #504C58;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
+    p{
+        color: #D4E1F4;
+        width: 70%;
+        font-size: 18px;
+    }
+    button{
+        color: #504C58;
+        background-color: #FA8A37;
+        width: 250px;
+        height: 60px;
+        border: 1px solid #FA8A37;
+        border-radius: 50px;
+        outline: none;
+        font-size: 20px;
+        &:hover{
+            background-color: #504C58;
+            color: #FA8A37;
+            cursor: pointer;
+        }
+    }
+    input{
+        color: #FA8A37;
+        background-color: #504C58;
+        width: 250px;
+        height: 60px;
+        border: 1px solid #FA8A37;
+        border-radius: 50px;
+        outline: none;
+        font-size: 20px;
+        padding: 0 15px;
+        text-align: center;
+    }
+    img{
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+}
+#footer__close--modal{
+    display: none;
+}
+.modal__send--wrapper{
+    height: 100vh;
+    width: 100%;
+    // display: none;
+    // position: fixed;
+    background-color: rgba(8, 16, 22, 0.55);
+    top: 0;
+    left: 0;
+    z-index: 5000;
+    display: flex;
+}
+.modal__send{
+    margin: auto;
+    width: 27%;
+    height: 65%;
+    min-width: 350px;
+    max-height: 500px;
+    background-color: #504C58;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
+    span{
+        font-size: 18px;
+        color: #D4E1F4;
+        width: 70%;
+    }
+    a{
+        color: #504C58;
+        background-color: #FA8A37;
+        width: 250px;
+        height: 60px;
+        border: 1px solid #FA8A37;
+        border-radius: 50px;
+        outline: none;
+        font-size: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        &:hover{
+            background-color: #504C58;
+            color: #FA8A37;
+            cursor: pointer;
+        }    
+    }
+}
+#modalOrder{
+    display: none;
+    z-index: 5000;
 }
