--- a/fix_pls_god/scss/mediaMain.scss
+++ b/fix_pls_god/scss/mediaMain.scss
@@ -20,6 +20,12 @@
     // .footer__wrapper div:nth-child(4){
     //     flex-direction: column;
     // }
+    .main__content div div{
+        min-width: 250px;
+    }
+    .main {
+        // min-height: 1720px;
+    }
     .footer__button{
         display: none;
     }
@@ -49,6 +55,13 @@
     }
 }
 @media (min-width:992px){
+    .main__content{
+        div{
+            div{
+                max-width: 320px;
+            }
+        }
+    }
     .mobile__nav a{
         display: none;
     }
@@ -62,8 +75,19 @@
         min-height: 1400px;
     }
 }
+@media (max-width:1202px){
+    .main{
+        min-height: 900px;
+    }
+}
 @media (max-width:992px){
     //
+    .main{
+        min-height: 1800px;
+    }
+    .main__content div {
+        flex-direction: column;
+    }
     .price__questions{
         text-align: center;
     }
