--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -237,61 +237,54 @@ ul.topnav{
 // ==========================================================================================
 .main {
     width: 100%;
-    max-width: 1440px;
-    height: 100vh;
+    height: 110vh;
     background-color: #D4E1F4;
-    display: flex;
-    justify-content: center;
+    @include flex__center;
 }
 .main__wrapper {
+    // margin-top: 35px;
+    height: 90%;
     width: 85%;
-    height: 530px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-    margin-top: 50px;
     h2 {
-        width: 78%;
-        padding: 0;
         color: #504C58;
-        font-size: 25px;
-        text-align: start;
-        font-weight: 400;
+        margin-top: 35px;
     }
 }
-.main__block--wrapper{
-    height: 60%;
-    width:90%;
+.main__content{
     display: flex;
-    flex-direction: column;
-    // justify-content: space-between;
-    margin-bottom: 70px;
+    justify-content: space-between;
+    flex-direction:  column;
+    height: 90%;
     div{
         display: flex;
-        justify-content: space-around;
+        flex-wrap: wrap;
+        justify-content: center;
         div{
-            padding: 0 0 20px 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 40%;
-            span:first-child{
-                color: #E1680F;
-                font-size: 30px;
-                font-weight: 600;
-                border-radius: 50%;
-                border: 1px #D4E1F4;
-                background-color: #D4E1F4;
-                box-shadow: 0 0 10px rgba(0,0,0,0.5);   
-                padding: 20px;
-            }
-            span:last-child{
-                color: #504C58;
-                padding: 10px;
-                text-align: center;
-            }
+        box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.2);
+        // max-width: 320px;
+        min-height: 180px;
+        margin: 20px 10px 20px 10px;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
         }
+    }
+    span{
+        color: #E1680F;
+        font-size: 22px;
+        font-weight: 700;
+        text-align: center;
+    }
+    p{
+        color: #504C58;
+        text-align: center;
+    }
+    img{
+        height: 60px;
+        padding-top: 10px;
     }
 }
 
