--- a/fix_pls_god/scss/mediaMain.scss
+++ b/fix_pls_god/scss/mediaMain.scss
@@ -14,6 +14,13 @@
     .intro__text{
         text-align: center;
     }
+    .main__content{
+        div{
+            div{
+                min-width: 250px;
+            }
+        }
+    }
     .footer__wrapper div:nth-child(2){
         flex-direction: column;
     }
